<resources>
    <!--TITLE-->
        <string name="app_name">Posfly</string>
    <!--LOGIN-->
        <string name="email">Correo electrónico</string>
        <string name="pass">Contraseña</string>
        <string name="login">Iniciar sesión</string>
        <string name="start">Iniciar</string>
        <string name="logout">Cerrar sesión</string>
        <string name="create">Crear cuenta</string>
        <string name="forgot_pass">Olvidé mi contraseña</string>
        <string name="edit">Editar</string>
        <string name="delete">Eliminar</string>
    <!--REGISTER-->
        <string name="name">Nombre</string>
        <string name="lastname">Apellido</string>
        <string name="user">Usuario</string>
        <string name="repass">Confirmar contraseña</string>
    <!--FORGOT-->
        <string name="recover_pass">Restablecer contraseña</string>
        <string name="forgot_info">Escribe la dirección de correo electrónico con la que te registraste. Ingresa el código de 6 dígitos que recibiste para establecer una nueva contraseña.</string>
        <string name="send_email">Enviar correo</string>
        <string name="codigo">Código</string>
    <!--START-->
        <string name="events">Eventos</string>
        <string name="museum">Museo</string>
        <string name="profile">Perfil</string>
    <!--EVENT-->
        <string name="create_event">Crear evento</string>
        <string name="edit_event">Editar evento</string>
        <string name="delete_event">Eliminar evento</string>
        <string name="event_name">Nombre del evento</string>
        <string name="place">Lugar</string>
        <string name="date">Fecha</string>
        <string name="hour">Hora</string>
        <string name="price">Precio</string>
        <string name="description">Descripción</string>
    <!--MUSEUM-->
        <string name="create_museum">Crear anécdota</string>
        <string name="edit_museum">Editar anécdota</string>
        <string name="delete_museum">Eliminar anécdota</string>
        <string name="museum_name">Nombre de la anécdota</string>
        <string name="anonimo">Anónimo</string>
        <string name="me_gusta">Me gusta</string>
        <string name="nome_gusta">No me gusta</string>
    <!--PROFILE-->
        <string name="edit_profile">Editar Perfil</string>
        <string name="mod_pass">Cambiar contraseña</string>
        <string name="old_pass">Contraseña anterior</string>
        <string name="new_pass">Nueva contraseña</string>
        <string name="aceptar">Aceptar</string>
        <string name="cancelar">Cancelar</string>
</resources>