<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/create_event"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtNameE"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/event_name"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@color/colorAccent" />

        <EditText
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/date"
            android:inputType="none"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/txtHour"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/hour"
            android:inputType="none"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/txtPlace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/place"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@color/colorAccent" />

        <EditText
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/price"
            android:inputType="numberDecimal"
            android:textColorHint="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCreateE"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/buttons_shape"
            android:gravity="center"
            android:text="@string/create_event"
            android:textColor="@android:color/white" />
    </LinearLayout>
</LinearLayout>