<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewMuseum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/edit_museum"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtEditNameM"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/museum_name"
            android:inputType="textPersonName"
            android:textColor="@android:color/black"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@color/colorAccent" />

        <EditText
            android:id="@+id/txtEditDateM"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/date"
            android:inputType="none"
            android:textColorHint="@android:color/darker_gray" />

        <EditText
            android:id="@+id/txtEditDescM"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textColor="@android:color/background_dark"
            android:textColorHighlight="@color/colorPrimary"
            android:textColorHint="@android:color/darker_gray"
            android:textColorLink="@color/colorAccent" />

        <CheckBox
            android:id="@+id/cbAnonimoE"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/anonimo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnEditMuseum"
            android:layout_width="220dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:background="@drawable/buttons_shape"
            android:gravity="center"
            android:text="@string/edit_museum"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>